@@ -25,19 +25,13 @@ import java.lang.management.MemoryMXBean;
 import java.net.URLClassLoader;
 import java.util.Arrays;
 import java.util.HashMap;
-import java.util.Iterator;
-import java.util.List;
 import java.util.Map;
 
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
-import org.apache.hadoop.fs.Path;
-import org.apache.hadoop.hive.conf.HiveConf;
 import org.apache.hadoop.hive.ql.plan.FetchWork;
 import org.apache.hadoop.hive.ql.plan.MapredLocalWork;
 import org.apache.hadoop.hive.ql.plan.MapredWork;
-import org.apache.hadoop.hive.ql.plan.MapredLocalWork.BucketMapJoinContext;
-import org.apache.hadoop.hive.serde2.objectinspector.InspectableObject;
 import org.apache.hadoop.hive.serde2.objectinspector.ObjectInspector;
 import org.apache.hadoop.io.Writable;
 import org.apache.hadoop.mapred.JobConf;
@@ -45,7 +39,6 @@ import org.apache.hadoop.mapred.MapReduceBase;
 import org.apache.hadoop.mapred.Mapper;
 import org.apache.hadoop.mapred.OutputCollector;
 import org.apache.hadoop.mapred.Reporter;
-import org.apache.hadoop.util.ReflectionUtils;
 import org.apache.hadoop.util.StringUtils;
 
 /**
@@ -64,47 +57,12 @@ public class ExecMapper extends MapReduceBase implements Mapper {
   private static boolean done;
 
   // used to log memory usage periodically
-  private MemoryMXBean memoryMXBean;
+  public static MemoryMXBean memoryMXBean;
   private long numRows = 0;
   private long nextCntr = 1;
-  private String lastInputFile = null;
   private MapredLocalWork localWork = null;
 
-  private ExecMapperContext execContext = new ExecMapperContext();
-
-  public static class ExecMapperContext {
-    boolean inputFileChanged = false;
-    String currentInputFile;
-    Integer fileId = new Integer(-1);
-
-    JobConf jc;
-    public boolean isInputFileChanged() {
-      return inputFileChanged;
-    }
-    public void setInputFileChanged(boolean inputFileChanged) {
-      this.inputFileChanged = inputFileChanged;
-    }
-    public String getCurrentInputFile() {
-      return currentInputFile;
-    }
-    public void setCurrentInputFile(String currentInputFile) {
-      this.currentInputFile = currentInputFile;
-    }
-    public JobConf getJc() {
-      return jc;
-    }
-    public void setJc(JobConf jc) {
-      this.jc = jc;
-    }
-
-    public Integer getFileId() {
-      return fileId;
-    }
-    public void setFileId(Integer fileId) {
-      this.fileId = fileId;
-    }
-
-  }
+  private final ExecMapperContext execContext = new ExecMapperContext();
 
   @Override
   public void configure(JobConf job) {
@@ -123,7 +81,7 @@ public class ExecMapper extends MapReduceBase implements Mapper {
     }
     try {
       jc = job;
-      execContext.jc = jc;
+      execContext.setJc(jc);
       // create map and fetch operators
       MapredWork mrwork = Utilities.getMapRedWork(job);
       mo = new MapOperator();
@@ -158,6 +116,8 @@ public class ExecMapper extends MapReduceBase implements Mapper {
             .getOutputObjectInspector()});
         l4j.info("fetchoperator for " + entry.getKey() + " initialized");
       }
+      this.execContext.setLocalWork(localWork);
+      this.execContext.setFetchOperators(fetchOperators);
       // defer processing of map local operators to first row if in case there
       // is no input (??)
     } catch (Throwable e) {
@@ -181,14 +141,8 @@ public class ExecMapper extends MapReduceBase implements Mapper {
       mo.setOutputCollector(oc);
       mo.setReporter(rp);
     }
-
-    if(inputFileChanged()) {
-      if (this.localWork != null
-          && (localWork.getInputFileChangeSensitive() || this.lastInputFile == null)) {
-        processMapLocalWork(localWork.getInputFileChangeSensitive());
-      }
-      this.lastInputFile = HiveConf.getVar(jc, HiveConf.ConfVars.HADOOPMAPFILENAME);
-    }
+    // reset the execContext for each new row
+    execContext.resetRow();
 
     try {
       if (mo.getDone()) {
@@ -219,96 +173,6 @@ public class ExecMapper extends MapReduceBase implements Mapper {
     }
   }
 
-  /**
-   * For CompbineFileInputFormat, the mapper's input file will be changed on the
-   * fly. If the map local work has any mapping depending on the current
-   * mapper's input file, the work need to clear context and re-initialization
-   * after the input file changed. This is first introduced to process bucket
-   * map join.
-   *
-   * @return
-   */
-  private boolean inputFileChanged() {
-    String currentInputFile = HiveConf.getVar(jc, HiveConf.ConfVars.HADOOPMAPFILENAME);
-    execContext.currentInputFile = currentInputFile;
-    if (this.lastInputFile == null
-        || !this.lastInputFile.equals(currentInputFile)) {
-      execContext.inputFileChanged = true;
-      return true;
-    }
-    execContext.inputFileChanged = false;
-    return false;
-  }
-
-  private void processMapLocalWork(boolean inputFileChangeSenstive) {
-    // process map local operators
-    if (fetchOperators != null) {
-      try {
-        int fetchOpNum = 0;
-        for (Map.Entry<String, FetchOperator> entry : fetchOperators
-            .entrySet()) {
-          int fetchOpRows = 0;
-          String alias = entry.getKey();
-          FetchOperator fetchOp = entry.getValue();
-
-          if(inputFileChangeSenstive) {
-            fetchOp.clearFetchContext();
-            setUpFetchOpContext(fetchOp, alias);
-          }
-
-          Operator<? extends Serializable> forwardOp = localWork
-              .getAliasToWork().get(alias);
-
-          while (true) {
-            InspectableObject row = fetchOp.getNextRow();
-            if (row == null) {
-              forwardOp.close(false);
-              break;
-            }
-            fetchOpRows++;
-            forwardOp.process(row.o, 0);
-            // check if any operator had a fatal error or early exit during
-            // execution
-            if (forwardOp.getDone()) {
-              done = true;
-              break;
-            }
-          }
-
-          if (l4j.isInfoEnabled()) {
-            l4j
-                .info("fetch " + fetchOpNum++ + " processed " + fetchOpRows
-                    + " used mem: "
-                    + memoryMXBean.getHeapMemoryUsage().getUsed());
-          }
-        }
-      } catch (Throwable e) {
-        abort = true;
-        if (e instanceof OutOfMemoryError) {
-          // Don't create a new object if we are already out of memory
-          throw (OutOfMemoryError) e;
-        } else {
-          throw new RuntimeException("Hive Runtime Error: Map local work failed", e);
-        }
-      }
-    }
-  }
-
-  private void setUpFetchOpContext(FetchOperator fetchOp, String alias)
-      throws Exception {
-    String currentInputFile = HiveConf.getVar(jc, HiveConf.ConfVars.HADOOPMAPFILENAME);
-    BucketMapJoinContext bucketMatcherCxt = this.localWork.getBucketMapjoinContext();
-    Class<? extends BucketMatcher> bucketMatcherCls = bucketMatcherCxt.getBucketMatcherClass();
-    BucketMatcher bucketMatcher = (BucketMatcher) ReflectionUtils.newInstance(bucketMatcherCls, null);
-    bucketMatcher.setAliasBucketFileNameMapping(bucketMatcherCxt.getAliasBucketFileNameMapping());
-
-    List<Path> aliasFiles = bucketMatcher.getAliasBucketFiles(currentInputFile,
-        bucketMatcherCxt.getMapJoinBigTableAlias(),
-        alias);
-    Iterator<Path> iter = aliasFiles.iterator();
-    fetchOp.setupContext(iter, null);
-  }
-
 
   private long getNextCntr(long cntr) {
     // A very simple counter to keep track of number of rows processed by the
@@ -331,7 +195,6 @@ public class ExecMapper extends MapReduceBase implements Mapper {
     // detecting failed executions by exceptions thrown by the operator tree
     // ideally hadoop should let us know whether map execution failed or not
     try {
-      inputFileChanged();
       mo.close(abort);
       if (fetchOperators != null) {
         MapredLocalWork localWork = mo.getConf().getMapLocalWork();
@@ -362,6 +225,18 @@ public class ExecMapper extends MapReduceBase implements Mapper {
 
   public static boolean getDone() {
     return done;
+  }
+
+  public boolean isAbort() {
+    return abort;
+  }
+
+  public void setAbort(boolean abort) {
+    this.abort = abort;
+  }
+
+  public static void setDone(boolean done) {
+    ExecMapper.done = done;
   }
 
   /**
